crates/tests/src/snapshots/fe_compiler_tests__compile_errors__call_undefined_function_on_storage_struct.snap
---
source: tests/src/compile_errors.rs
expression: "error_string(&path, &src)"

---
error: No function `doesnt_exist` exists on type `Something`
  ┌─ fixtures/compile_errors/call_undefined_function_on_storage_struct.fe:8:17
  │
8 │     self.thingy.doesnt_exist()
  │                 ^^^^^^^^^^^^ undefined function


